* Changed the default velo font format to a better default.
* Added velo text opacity.
* Added velo_anchor option which allows to set the text expansion direction.
* Velo is now by default in the lower left with an anchor of left.

Version 40, 26 October 2022
---------------------------

Supported games in this release:
* Counter-Strike: Source
* Counter-Strike: Global Offensive
* Team Fortress 2
* Zombie Panic! Source
* Half-Life 2
* Source 2013 mods
* Black Mesa
* Half-Life 2: Deathmatch
* Synergy
* Hunt Down The Freeman
* Empires

* Added SVR injector to inject into running games at your own risk. The injector will only find games that are running in insecure mode.
* Fixed sound address in latest CSGO update (@SmileyAG)
* New games added (@SmileyAG, @Neoony)
* Updated FFmpeg binaries to 5.1.2

Version 39, 12 March 2022
---------------------------

Supported games in this release:
* Counter-Strike: Source
* Counter-Strike: Global Offensive
* Team Fortress 2
* Zombie Panic! Source
* Half-Life 2
* Source 2013 mods
* Black Mesa

* Fixed issue that could cause unwanted border to be added to velo.
* Fixed issue where the velo text could jump a tiny bit when the first number changes.
* Added option to disable audio processing that may increase performance in some circumstances.
* Fixed issue where startmovie usage did not show.

Version 38, 2 February 2022
---------------------------

Supported games in this release:
* Counter-Strike: Source
* Counter-Strike: Global Offensive
* Team Fortress 2
* Zombie Panic! Source
* Half-Life 2
* Source 2013 mods
* Black Mesa

* CSGO now uses a new method for capturing player velo.

Version 37, 12 December 2021
--------------------------

Supported games in this release:
* Counter-Strike: Source
* Counter-Strike: Global Offensive
* Team Fortress 2
* Zombie Panic! Source
* Half-Life 2
* Source 2013 mods
* Black Mesa

* Fixed crash in movement games if velo was not enabled and pattern was outdated.