@@ -120,3 +120,6 @@ velo_align=-80 80
 # A value of center means that the text will expand outwards both left and right.
 # A value of left means that the text will expand to the right.
 velo_anchor=left
+
+# Length of which velocity to show. Possible values are: xy, xyz, z.
+velo_length=xy
